--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^13.0.0",
+    "@react-native-firebase/auth": "^13.0.0",
+    "@react-native-firebase/firestore": "^13.0.0",
     "native-base": "3.2.1",
     "react": "17.0.1",
     "react-native": "0.64.1",
